created synchronous request adding and functionality to handle HTTP request data and store it in an SQL database
